--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ img {
 
 .light {
   background-color: white;
-  color: black;
+  color: rgb(31, 30, 30);
 }
 
 .dark {
@@ -65,7 +65,7 @@ img {
   align-items: center;
   justify-content: space-between;
   padding: 0 16px;
-  background-color: lightgray;
+  background-color: rgb(31, 30, 30);
 }
 
 /* Nav */
@@ -90,7 +90,7 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: lightgray;
+  background-color: rgb(31, 30, 30);
 }
 
 .arrowIcon {
