--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,12 @@ img {
   justify-content: space-between;
   padding: 0 16px;
   background-color: rgb(31, 30, 30);
+  height: 60px;
+}
+
+.headerIcon {
+  width: 52px;  
+  height: auto;
 }
 
 /* Nav */
