--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,12 @@ a{
   color: var(--primaryColor);
 }
 
+h1, h2, h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 img {
   max-width: 50%;
@@ -102,10 +108,6 @@ img {
   align-items: center;
   justify-content: center;
   background-color: rgb(31, 30, 30);
-}
-
-.arrowIcon {
-  transform: rotate(180deg);
 }
 
 /* MEDIA */
